# graphql-rs

./: &1  .env  Cargo.toml  README.md  docker.env  junk.out  out.sql
database/: bfpd-schema.sql  up.sql
database/mariadb/: up.sql
database/pg/: down.sql  up.sql
docker/: Docker-README.txt  Dockerfile  docker.env
migrations/2020-10-02-131320_create_posts/: up.sql
src/: csv.rs  db.rs  graphql_schema.rs  graphql_schema.rs.mysql  lib.rs  main.rs  models.rs  models.rs.pg  schema.rs
tests/: ingest-cli.rs
