[package]
name = "graphql-rs"
version = "0.1.0"
authors = ["Gary Moore <littlebunch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cargo.toml
    actix-web = "1.0.0"
    diesel = { version = "1.4.5", features = ["mysql","chrono","r2d2"] }
    chrono ={version= "0.4.11", features=["serde"]}
    dotenv = "0.9.0"
    env_logger = "0.6"
    futures = "0.1"
    juniper = "0.13.1"
    serde = "1.0"
    serde_derive = "1.0"
    serde_json = "1.0"
